--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,15 @@ services:
         networks: 
             - backend
         links:
-            - "docker-db"
+            - docker-db
             
     docker-db:
         image: postgres
         restart: always
         environment: 
-            POSTGRES_PASSWORD: mysecretpassword
-            POSTGRES_USER: postgres
-            POSTGRES_DB: suflexdb
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_DB: ${POSTGRES_DB}
         volumes: 
             - ./pgdata:/var/lib/postgresql/data/pgdata
         ports:
