--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,18 @@
 version: '3.4'
 
 services: 
-    docker-app:
+    app:
         build: .
         restart: always
         ports:
             - '3000:3000'
         depends_on: 
-            - dockerdb
+            - db
         networks: 
             - backend
-        links:
-            - dockerdb
-            
-    dockerdb:
+        command: ["./wait-for-it.sh", "db:5432", "--", "pm2-runtime", "start", "./server.js"]
+
+    db:
         image: postgres
         restart: always
         environment: 
@@ -29,4 +28,3 @@ services:
             
 networks: 
     backend:
-        driver: bridge
