--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,16 +15,23 @@ services:
     db:
         image: postgres
         restart: always
+        volumes_from: 
+            - pg_data
         environment: 
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             POSTGRES_USER: ${POSTGRES_USER}
             POSTGRES_DB: ${POSTGRES_DB}
-        volumes: 
-            - ./pgdata:/var/lib/postgresql/data/pgdata
+            PGDATA: /var/lib/postgresql/data/pgdata
         ports:
             - '5432:5432'
         networks: 
             - backend
-            
+    
+    pg_data:
+        image: Alpine:latest
+        volumes:
+            - ./pgdata:/var/lib/postgresql/data/pgdata
+        command: "true"        
+
 networks: 
     backend:
