--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,6 @@ services:
     db:
         image: postgres
         restart: always
-        volumes_from: 
-            - pg_data
         environment: 
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             POSTGRES_USER: ${POSTGRES_USER}
@@ -26,12 +24,10 @@ services:
             - '5432:5432'
         networks: 
             - backend
-    
-    pg_data:
-        image: Alpine:latest
         volumes:
-            - ./pgdata:/var/lib/postgresql/data/pgdata
-        command: "true"        
-
+            - pgdata: /var/lib/postgresql/data/pgdata
+volumes:
+    pgdata:
+    
 networks: 
     backend:
